# snow-ray

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/core/: base.h  bbox.h  camera.h  common.h  core.h  defines.h  efloat.h  film.cpp  film.h  intersect.h  log.cpp  log.h  material.h  random.h  ray.h  shape.h  vec.h  vec4.h
src/core/base/: bbox.h  bsdf.h  camera.h  film.cpp  film.h  intersect.h  material.h  ray.h  shape.h  spectrum.h
src/core/math/: base.h  vector2.h  vector2_impl.h  vector3.h  vector3_impl.h  vector4.h  vector4_impl.h
src/core/utils/: options.cpp  options.h  random.cpp  random.h  utils.h  vec.h  vec4.h
src/shapes/: sphere.1.cpp  sphere.cpp  sphere.h
test/: smallpt.cpp  test_sphere.cpp  test_vec.cpp
